src/test/06-Errors/error-spork-int.txt
error-spork-int.ck:1:9: error: only function calls can be sporked
[1] spork ~ 1;
            ^
